WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292909
Fix leak of previous m_modelPlayer in HTMLModelElement::createModelPlayer()
https://bugs.webkit.org/show_bug.cgi?id=292909
Summary
Fix leak of previous m_modelPlayer in HTMLModelElement::createModelPlayer()
Ada Chan
Reported
2025-05-12 21:55:43 PDT
Fix leak of previous m_modelPlayer in HTMLModelElement::createModelElement()
Attachments
Add attachment
proposed patch, testcase, etc.
Ada Chan
Comment 1
2025-05-12 21:55:44 PDT
<
rdar://problem/150500615
>
Ada Chan
Comment 2
2025-05-12 22:00:23 PDT
(In reply to Ada Chan from
comment #0
)
> Fix leak of previous m_modelPlayer in HTMLModelElement::createModelElement()
Typo: should be HTMLModelElement::createModelPlayer().
Ada Chan
Comment 3
2025-05-12 22:01:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45291
EWS
Comment 4
2025-05-13 09:37:49 PDT
Committed
294851@main
(e5158bf2619c): <
https://commits.webkit.org/294851@main
> Reviewed commits have been landed. Closing PR #45291 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug