Fix leak of previous m_modelPlayer in HTMLModelElement::createModelPlayer() https://bugs.webkit.org/show_bug.cgi?id=292909 rdar://150500615

Reviewed by Mike Wyrzykowski.

HTMLModelElement::m_modelPlayer can be non-null when createModelPlayer()
is called, resulting in the leak of the previous model player. To fix this,
delete the previous model player before overwriting m_modelPlayer with the
new one.

* Source/WebCore/Modules/model-element/HTMLModelElement.cpp:
(WebCore::HTMLModelElement::createModelPlayer):
(WebCore::HTMLModelElement::unloadModelPlayer):
We should also call deleteModelPlayer() here rather than just setting
m_modelPlayer to null.

Canonical link: https://commits.webkit.org/294851@main